# SnapPDF

./: .env.example  .gitignore  .replit  VERCEL_DEPLOYMENT_SUMMARY.md  app.py  forms.py  main.py  models.py  paypal_config.py  pdf_processor.py  pyproject.toml  queue_manager.py  replit.md  requirements.txt  routes.py  utils.py  vercel.json
attached_assets/: Pasted-You-are-a-senior-SaaS-product-designer-conversion-focus_1766847827577.txt  Pasted-You-are-a-senior-SaaS-product-strategist-conversion-foc_1766849492523.txt  Pasted-You-are-a-senior-SaaS-product-strategist-conversion-foc_1766849572427.txt  Pasted-You-are-a-senior-backend-engineer-debugging-a-productio_1767008773446.txt  Pasted-You-are-a-senior-full-stack-engineer-and-DevOps-expert-_1767007616199.txt  Pasted-You-are-a-senior-full-stack-engineer-fixing-a-broken-pr_1767009367736.txt  Pasted-You-are-a-senior-full-stack-engineer-fixing-a-broken-pr_1767010041584.txt
instance/: pdf_tools.db
processed/: Screenshot_2024-05-08_011541_20251227_163405_09013f89_ocr_20251227_163409_c431f2dd.txt  merged_document_20250703_183416_c2005958_20250703_200251_3a77da0e_20250703_200255_f75e5746.docx  merged_document_20250703_183416_c2005958_20250703_200254_8e867321_20250703_200300_321a98d1.docx
static/: manifest.json  style.css
static/css/: custom.css
temp/: .gitkeep
templates/: 404.html  500.html  all-tools.html  base.html  contact.html  index.html  login.html  premium.html  privacy.html  register.html  result.html  terms.html  tool.html  tools.html
uploads/: .gitkeep
utils/: file_validator.py  pdf_processor.py
(+1 files in other folders)
