[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "reportlab>=4.4.2",
    "docx>=0.2.4",
    "werkzeug>=3.1.3",
    "pypdf2>=3.0.1",
    "openpyxl>=3.1.5",
    "sqlalchemy>=2.0.41",
    "pillow>=11.3.0",
    "pymupdf>=1.26.3",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
]
